# minihsm

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  ISO-7816-4.odt  README.md  docker_launcher.sh  main.c  pkcs11-tool.md  plain_text.txt
CryptoKey/: .gitignore  README.md  build.xml
CryptoKey/Scripts/: 01_install_test.jcsh  04_verify_test.jcsh  05_reset_PIN_test.jcsh  06_sm_test.jcsh  jcshell_notes.md  load.jcsh  test_change_refdata.jcsh  test_get_data.jcsh  test_install.jcsh  test_reset_PIN.jcsh  test_verify.jcsh
CryptoKey/Scripts/JCShell/: 01_install_test.jcsh  03_change_refdata_test.jcsh
CryptoKey/Scripts/OpenSSL/: intergalaxy.sh
CryptoKey/Scripts/OpenSSL/ssl/: CI_csr.cnf  DPpb_ext.cnf  DPtls_csr.cnf  EUICC_ext.cnf  EUM_ext.cnf  openssl-pkcs11.cnf
CryptoKey/Scripts/Python/: README.md  aes_test.py  ecdh_test.py  pythonSC.py  secp256k1.py
CryptoLib/: CMakeLists.txt
CryptoLib/src/: CMakeLists.txt  cryptoKeyObject.c  cryptoLib.c  cryptoLib.h  iso7816.c  iso7816.h
CryptoLib/src/cryptoki/: pkcs11-cryptolib.h
CryptoLib/src/scard/: scard_library.c  scard_library.h
JDiffie-Hellman/: build.sh
JDiffie-Hellman/src/ru/dh/: Main.java
Scripts/JCShell/: 01_install_test.jcsh  02_get_data_test.jcsh  03_change_refdata_test.jcsh  04_verify_test.jcsh  jcshell_notes.md
Scripts/OpenSSL/: pkcs11-test.sh  readme.odt
Scripts/OpenSSL/__MACOSX/ssl/: ._CI_csr.cnf
Scripts/OpenSSL/ssl/: DPauth_csr.cnf  DPauth_ext.cnf  DPpb_csr.cnf  DPtls_ext.cnf  EUICC_csr.cnf  EUM_csr.cnf
Scripts/Python/: README.md  aes_test.py  ecdh_test.py
src/: CMakeLists.txt  cryptoLib.c
src/cryptoki/: pkcs11-cryptolib.h
src/scard/: scard_library.c  scard_library.h
src/scardLibrary/: CMakeLists.txt  scard_library.c  scard_library.h
(+6 files in other folders)
